# mission-backend-rs

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  api.md
.github/workflows/: ci.yml  image.yml  release.yml
backend/: Cargo.toml  diesel.toml
backend/migrations/2025-02-17-000000_create_assigned_kpi/: down.sql  up.sql
backend/src/: lib.rs  main.rs
backend/src/admin/: delete_mission.rs  mission_invalid.rs  mod.rs
backend/src/cache/: kpi.rs  manager.rs  mission.rs  mod.rs
backend/src/damage/: character.rs  entity.rs  general.rs  mod.rs  weapon.rs
backend/src/db/: mission.rs  models.rs  schema.rs
backend/src/general/: character.rs  game_time.rs  general_info.rs  mission_type.rs  mod.rs  player.rs
backend/src/info/: brothers.rs  weapon.rs
backend/src/kpi/: assigned_kpi.rs  bot_kpi_info.rs  info.rs  mod.rs  player.rs  version.rs
backend/src/mission/: load.rs  mission.rs  mission_info.rs  mission_list.rs  mod.rs
client/: Cargo.toml
client/src/: api.rs  assigned_kpi.rs  cache_status.rs  formatter.rs  kpi.rs  lib.rs  load.rs  main.rs  mission_invalid.rs  mission_list.rs
common/: Cargo.toml
common/src/: admin.rs  cache.rs  damage.rs  general.rs  info.rs  kpi.rs  lib.rs  mission.rs  mission_log.rs
config/mapping/: entity.txt  entity_combine.txt  weapon.txt  weapon_combine.txt  weapon_hero.txt
src/: lib.rs  main.rs
src/admin/: delete_mission.rs  mod.rs
src/cache/: kpi.rs  manager.rs  mission.rs  mod.rs
src/client/: mod.rs
src/damage/: character.rs  entity.rs  general.rs  mod.rs  weapon.rs
src/db/: mission.rs  mission_log.rs
src/general/: character.rs  game_time.rs  general.rs  mission_type.rs  mod.rs  player.rs
src/info/: brothers.rs  weapon.rs
src/kpi/: bot_kpi_info.rs  info.rs  mod.rs  player.rs
src/mission/: load.rs  mission.rs  mission_list.rs  mod.rs
