[package]
name = "mission-backend-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["cookies"] }
csv = "1.3.0"
derive_more = { version = "1.0.0", features = ["debug", "display", "error"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
encoding_rs = "0.8.34"
env_logger = "0.11.5"
flate2 = "1.0.33"
log = "0.4.22"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
redis = { version = "0.27.2" }
regex = "1.10.6"
regex_static = "0.1.1"
reqwest = { version = "0.12.7", features = ["blocking", "cookies"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
zstd = "0.13.2"


[package.metadata.cross.target.i686-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH libpq-dev:$CROSS_DEB_ARCH",
]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH libpq-dev:$CROSS_DEB_ARCH",
]

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH libpq-dev:$CROSS_DEB_ARCH",
]
