[package]
name = "mission-backend-rs"
version = "0.13.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0", features = ["cookies"] }
csv = "1.3.1"
derive_more = { version = "1.0.0", features = ["debug", "display", "error"] }
diesel = { version = "2.2.7", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
encoding_rs = "0.8.35"
env_logger = "0.11.6"
log = "0.4.25"
redis = { version = "0.28.2" }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "cookies"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
zstd = "0.13.2"
actix-files = "0.6.6"
chrono = "0.4.39"

[profile.release]
lto = true
