[package]
name = "mission-backend-rs"
version = "0.13.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
actix-web = { version = "4.9", features = ["cookies"] }
derive_more = { version = "1.0", features = ["debug", "display", "error"] }
diesel = { version = "2.2", features = ["postgres", "r2d2"] }
diesel_migrations = { version = "2.2", features = ["postgres"] }
dotenvy = "0.15"
env_logger = "0.11"
log = "0.4"
redis = "0.28"
zstd = "0.13"
actix-files = "0.6"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
uuid = { version = "1.13", features = ["v4"] }