[package]
name = "mission-monitor-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
encoding_rs = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["cookies", "blocking"] }
zstd = "0.13"
reqwest_cookie_store = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"