[package]
name = "mission-monitor-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
encoding_rs = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["cookies", "blocking"] }
zstd = "0.13"
reqwest_cookie_store = { version = "0.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
clio = { version = "0.3", features = ["clap-parse"] }
rpassword = "7.3"
chrono = "0.4"
tabled = { version = "0.18", features = ["derive"] }
csv = { version = "1.3" }